--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.14.6",
     "@types/dotenv": "^8.2.0",
     "@types/node": "^15.12.4",
+    "jest": "^27.0.5",
     "nodemon": "^2.0.7",
     "parcel-bundler": "^1.12.5",
     "ts-node": "^10.0.0",
