--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.14.5",
     "@types/dotenv": "^8.2.0",
+    "@types/jest": "^26.0.23",
+    "@types/mongoose-paginate-v2": "^1.3.10",
     "@types/node": "^15.12.4",
+    "babel-jest": "^27.0.5",
     "jest": "^27.0.5",
     "nodemon": "^2.0.7",
     "parcel-bundler": "^1.12.5",
@@ -31,6 +36,7 @@
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
     "mongoose": "^5.12.5",
+    "mongoose-paginate-v2": "^1.3.18",
     "react": ">=15",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
