--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "server": "nodemon",
-    "client": "parcel client/index.html"
+    "client": "parcel client/index.html",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -30,11 +31,14 @@
   "dependencies": {
     "@apollo/client": "^3.3.15",
     "@babel/plugin-transform-runtime": "^7.14.5",
+    "@types/faker": "^5.5.6",
     "antd": "^4.15.2",
     "apollo-datasource": "^0.8.0",
     "apollo-server": "^2.23.0",
     "dotenv": "^8.2.0",
+    "faker": "^5.5.3",
     "graphql": "^15.5.0",
+    "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.5",
     "mongoose-paginate-v2": "^1.3.18",
     "react": ">=15",
